<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dummy"></string>
    <string name="app_name">Send to SD card</string>
    <string name="sd_card">SD card</string>
    <string name="files_title">{0} {1,choice,0#file|1#files}</string>
    <string name="unsupported_intent">Cannot send this</string>
    <string name="unsupported_file">Cannot send this file</string>
    <string name="unsupported_files">Cannot send these files</string>
    <string name="no_files">There are no files to send</string>
    <string name="copy_here">Copy here</string>
    <string name="move_here">Move here</string>
    <string name="folders">Folders</string>
    <string name="no_sd_card">Please insert the SD card</string>
    <string name="copy_file">Copy file</string>
    <string name="move_file">Move file</string>
    <string name="file_is_copied">File has been copied</string>
    <string name="file_is_moved">File has been moved</string>
    <string name="file_is_not_copied">Cannot copy the file</string>
    <string name="file_is_not_moved">Cannot move the file</string>
    <string name="file_is_not_deleted">File has been copied. Cannot delete the original file.</string>
    <string name="files_are_copied">{0} {1,choice,0#file has|1#files have} been copied</string>
    <string name="files_are_moved">{0} {1,choice,0#file has|1#files have} been moved</string>
    <string name="files_are_only_copied">{0} {1,choice,0#file has|1#files have} been only copied</string>
    <string name="errors_appeared">{0} {1,choice,0#error has|1#errors have} appeared</string>
    <string name="preferences">Preferences</string>
    <string name="app_preferences">Send to SD card preferences</string>
    <string name="how_to_use">How to use</string>
    <string name="how_to_use_1_1">It is not the application which can be run from the Launcher. It cannot be found in the list of the installed applications.</string>
    <string name="how_to_use_1_2">It adds the new item to the Send or Share menu of the other applications.</string>
    <string name="how_to_use_1_3">Try, for example, to Send a photo from the Gallery (or Albums), like you usually do it to send the photo via e-mail. The \"SD card\" item should appear in the list of available targets to send.</string>
    <string name="how_to_use_2_0">Step by step:</string>
    <string name="how_to_use_2_1">* Choose \"Send\" or \"Share\" menu item in any application</string>
    <string name="how_to_use_2_2">* Choose \"SD card\"</string>
    <string name="how_to_use_2_3">* Choose the folder on SD card</string>
    <string name="how_to_use_2_4">* Tap \"Copy here\"</string>
    <string name="initial_folder">Initial folder</string>
    <string name="sd_card_root">SD card root</string>
    <string name="last_folder">Last folder</string>
    <string name="last_folders">Last folders</string>
    <string name="show_last_folders">Show last folders</string>
    <string name="last_folders_number">Number of last folders</string>
    <string name="show_last_folders_number">Show {0} last {0,choice,1#folder|1&lt;folders}</string>
    <string name="new_folder">New folder</string>
    <string name="create_folder">Create folder</string>
    <string name="folder_created">The folder is created</string>
    <string name="folder_not_created">Cannot create the folder</string>
    <string name="choose_file_name_menu">Choose file name</string>
    <string name="choose_file_name">Choose file name</string>
    <string name="please_wait">Please wait...</string>
    <string name="copying">Copying...</string>
    <string name="moving">Moving...</string>
    <string name="b_progress" formatted="false">%1.0f/%1.0f b</string>
    <string name="kb_progress" formatted="false">%1.1f/%1.1f Kb</string>
    <string name="mb_progress" formatted="false">%1.1f/%1.1f Mb</string>
    <string name="files_progress" formatted="false">%d/%d</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Donate $1 with Google Play</string>
    <string name="donate_thanks">Thank you!</string>
    <string name="view_type">View</string>
    <string name="full_screen_view">Full screen</string>
    <string name="dialog_view">Dialog window</string>
    <!-- v.0.3.11 -->
    <string name="mount_points">Mounts</string>
    <string name="internal_storage">Internal storage</string>
    <string name="external_storage">External storage</string>
    <string name="private_internal_storage">Private internal storage</string>
    <string name="private_external_storage">Private external storage</string>
    <string name="root_storage">Root</string>
</resources>
